[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "*"
base64 = "*"
env_logger = "0.5.3"
log = "0.4.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }

[[example]]
name = "micros" # examples/micros.rs
